# ideal-network

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  README.md  insert_alice_drand_key.sh  network.toml  zombienet.toml
client/consensus/beefy-etf/: Cargo.toml
client/consensus/beefy-etf/rpc/: Cargo.toml
client/consensus/beefy-etf/src/: aux_schema.rs  justification.rs  keystore.rs  lib.rs  round.rs  tests.rs  worker.rs
client/consensus/beefy-etf/src/communication/: gossip.rs
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/beefy-etf/: Cargo.toml
pallets/beefy-etf/src/: lib.rs  mock.rs
pallets/beefy-mmr-etf/: Cargo.toml
pallets/beefy-mmr-etf/src/: lib.rs  mock.rs
pallets/etf/: Cargo.toml
pallets/etf/src/: lib.rs
pallets/randomness-beacon/: Cargo.toml
pallets/randomness-beacon/src/: lib.rs  mock.rs  tests.rs
primitives/consensus/beefy-etf/: Cargo.toml
primitives/consensus/beefy-etf/src/: lib.rs  test_utils.rs  witness.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
