[workspace]
members = [
    "client/consensus/beefy-etf",
    "client/consensus/beefy-etf/rpc",
    "node",
    "runtime",
    "pallets/beefy-etf",
    "pallets/beefy-mmr-etf",
    "pallets/etf",
    "primitives/consensus/beefy-etf",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Ideal Labs <driemworks@idealabs.network>"]
repository = "https://github.com/ideal-lab5/ideal-network"
homepage = "https://idealabs.network"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.dependencies]
log = { version = "0.4.21", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
thiserror = { version = "1.0.48" }