[workspace]
members = [
    "node",
    "runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Ideal Labs <hello@idealabs.network>"]
repository = "https://github.com/ideal-lab5/ideal-network"
homepage = "https://idealabs.network"
license = "Apache-2.0"
version = "0.2.0"

[workspace.lints.rust]
suspicious_double_ref_op = { level = "allow", priority = 2 }

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
docify = "0.2.8"
hex-literal = "0.4.1"
log = { version = "0.4.21", default-features = false }
scale-info = { version = "2.11.1", default-features = false, features = [
    "derive",
] }
serde = "1.0.214"
serde_json = "1.0.133"
smallvec = "1.11.2"
thiserror = "1.0.48"
jsonrpsee = { version = "0.24.7", features = ["server"] }
futures = "0.3.31" 

# Local
ideal-nw-runtime = { path = "runtime" }

# Ideal Network
pallet-drand = { git = "https://github.com/ideal-lab5/idn-sdk", default-features = false }

# Substrate
frame-benchmarking = { version = "38.0.0", default-features = false }
frame-benchmarking-cli = { version = "43.0.0", default-features = false }
frame-executive = { version = "38.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.6.0", default-features = false }
frame-support = { version = "38.0.0", default-features = false }
frame-system = { version = "38.0.0", default-features = false }
frame-system-benchmarking = { version = "38.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "34.0.0", default-features = false }
frame-try-runtime = { version = "0.44.0", default-features = false }
sc-basic-authorship = { version = "0.45.0", default-features = false }
sc-chain-spec = { version = "38.0.0", default-features = false }
sc-cli = { version = "0.47.0", default-features = false }
sc-client-api = { version = "37.0.0", default-features = false }
sc-offchain = { version = "40.0.0", default-features = false }
sc-consensus = { version = "0.44.0", default-features = false }
sc-executor = { version = "0.40.1", default-features = false }
sc-network = { version = "0.45.1", default-features = false }
sc-network-sync = { version = "0.44.1", default-features = false }
sc-rpc = { version = "40.0.0", default-features = false }
sc-service = { version = "0.46.0", default-features = false }
sc-sysinfo = { version = "38.0.0", default-features = false }
sc-telemetry = { version = "25.0.0", default-features = false }
sc-tracing = { version = "37.0.1", default-features = false }
sc-transaction-pool = { version = "37.0.0", default-features = false }
sc-transaction-pool-api = { version = "37.0.0", default-features = false }
sp-api = { version = "34.0.0", default-features = false }
sp-block-builder = { version = "34.0.0", default-features = false }
sp-blockchain = { version = "37.0.1", default-features = false }
sp-consensus-aura = { version = "0.40.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-crypto-ec-utils = { version = "0.14.0", default-features = false }
sp-genesis-builder = { version = "0.15.1", default-features = false }
sp-keystore = { version = "0.40.0", default-features = false }
sp-io = { version = "38.0.0", default-features = false }
sp-inherents = { version = "34.0.0", default-features = false }
sp-offchain = { version = "34.0.0", default-features = false }
sp-runtime = { version = "39.0.3", default-features = false }
sp-session = { version = "36.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-timestamp = { version = "34.0.0", default-features = false }
sp-transaction-pool = { version = "34.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
substrate-frame-rpc-system = { version = "39.0.0", default-features = false }
prometheus-endpoint = { version = "0.17.0", default-features = false, package = "substrate-prometheus-endpoint" }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-wasm-builder = { version = "24.0.1", default-features = false }

# FRAME Pallets
pallet-aura = { version = "37.0.0", default-features = false }
pallet-authorship = { version = "38.0.0", default-features = false }
pallet-balances = { version = "39.0.0", default-features = false }
pallet-collator-selection = { version = "19.0.0", default-features = false }
pallet-message-queue = { version = "41.0.2", default-features = false }
pallet-session = { version = "38.0.0", default-features = false }
pallet-sudo = { version = "38.0.0", default-features = false }
pallet-timestamp = { version = "37.0.0", default-features = false }
pallet-transaction-payment = { version = "38.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "41.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "38.0.0", default-features = false }
pallet-xcm = { version = "17.0.1", default-features = false }

# Polkadot
polkadot-cli = { version = "19.0.0", features = ["rococo-native"], default-features = false }
polkadot-parachain-primitives = { version = "14.0.0", default-features = false }
polkadot-primitives = { version = "16.0.0", default-features = false }
polkadot-runtime-common = { version = "17.0.0", default-features = false }
xcm = { package = "staging-xcm", version = "14.2.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", version = "17.0.1", default-features = false }
xcm-executor = { package = "staging-xcm-executor", version = "17.0.0", default-features = false }

# Cumulus
cumulus-client-cli = { version = "0.18.0", default-features = false }
cumulus-client-collator = { version = "0.18.0", default-features = false }
cumulus-client-consensus-aura = { version = "0.18.0", default-features = false }
cumulus-client-consensus-common = { version = "0.18.0", default-features = false }
cumulus-client-consensus-proposer = { version = "0.16.0", default-features = false }
cumulus-client-service = { version = "0.19.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.17.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.17.1", default-features = false }
cumulus-pallet-session-benchmarking = { version = "19.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.17.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.17.0", default-features = false }
cumulus-primitives-aura = { version = "0.15.0", default-features = false }
cumulus-primitives-core = { version = "0.16.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.16.0", default-features = false }
cumulus-primitives-storage-weight-reclaim = { version = "8.0.0", default-features = false }
cumulus-primitives-utility = { version = "0.17.0", default-features = false }
cumulus-relay-chain-interface = { version = "0.18.0", default-features = false }
color-print = { version = "0.3.4" }
parachain-info = { version = "0.17.0", default-features = false, package = "staging-parachain-info" }
parachains-common = { version = "18.0.0", default-features = false }
