[package]
name = "ideal-nw-node"
description = "Ideal Network Node"
version = "0.0.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[lints]
workspace = true

# [[bin]]
# name = "parachain-template-node"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
log = { workspace = true, default-features = true }
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { features = ["derive"], workspace = true, default-features = true }
jsonrpsee = { version = "0.22", features = ["server"] }
futures = "0.3.28"
serde_json = { workspace = true, default-features = true }
ark-std = "0.4.0"
ark-serialize = "0.4.0"
rand = "0.8"
w3f-bls = "0.1.3"
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", branch = "tony/dev" }

# Local
beefy = { package = "sc-consensus-beefy-etf", path = "../client/consensus/beefy-etf", features = ["bls-experimental"] }
beefy-primitives = { package = "sp-consensus-beefy-etf", path = "../primitives/consensus/beefy-etf", features = ["bls-experimental"]}
ideal-nw-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
frame-benchmarking-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
pallet-transaction-payment-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-basic-authorship = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-chain-spec = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-offchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-executor = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-network = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-network-sync = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-rpc = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-service = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-sysinfo = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-telemetry = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-tracing = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-transaction-pool = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sc-transaction-pool-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-api = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-application-crypto = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-consensus-aura = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-keystore = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-io = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
sp-timestamp = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
substrate-frame-rpc-system = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
substrate-prometheus-endpoint = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }

# Polkadot
polkadot-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey", features = ["rococo-native"] }
polkadot-primitives = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
xcm = { package = "staging-xcm", git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey", default-features = false }

# Cumulus
cumulus-client-cli = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-client-collator = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-client-consensus-aura = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-client-consensus-common = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-client-consensus-proposer = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-client-service = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-primitives-core = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
cumulus-relay-chain-interface = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }
color-print = "0.3.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "tony/pubkey" }

[features]
default = []
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"ideal-nw-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"ideal-nw-runtime/try-runtime",
	"polkadot-cli/try-runtime",
	"sp-runtime/try-runtime",
]
